--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,8 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 board_build.filesystem = littlefs
+; board_build.partitions = my_partition.csv
+
 
 lib_deps = https://github.com/jeffd69/ESP32AlpacaServer.git
 
