--- a/platformio.ini
+++ b/platformio.ini
@@ -19,8 +19,8 @@ board_build.filesystem = littlefs
 
 lib_deps = https://github.com/jeffd69/ESP32AlpacaServer.git
 
-build_flags= -D ELEGANTOTA_USE_ASYNC_WEBSERVER=1
-                -D DEBUG
+;build_flags= -D ELEGANTOTA_USE_ASYNC_WEBSERVER=1
+;               -D DEBUG
 
 build_type = debug
 
