Handling of params improved

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,12 +14,16 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 board_build.filesystem = littlefs
-; board_build.partitions = my_partition.csv
+; https://community.platformio.org/t/how-to-change-partition-scheme-for-esp32/29687/5
+; https://esp32.jgarrettcorbin.com/
+board_build.partitions = partitions.csv
+; board_build.flash_mode = qio
 
 
 lib_deps = https://github.com/jeffd69/ESP32AlpacaServer.git
+            https://github.com/tzapu/WiFiManager
 
-;build_flags= -D ELEGANTOTA_USE_ASYNC_WEBSERVER=1
+; build_flags= -D ELEGANTOTA_USE_ASYNC_WEBSERVER=1
 ;               -D DEBUG
 
 build_type = debug
