fixed wifi provisioning at boot

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,7 @@ board_build.filesystem = littlefs
 ; https://community.platformio.org/t/how-to-change-partition-scheme-for-esp32/29687/5
 ; https://esp32.jgarrettcorbin.com/
 board_build.partitions = partitions.csv
-; board_build.flash_mode = qio
+board_build.flash_mode = qio
 
 
 lib_deps = https://github.com/jeffd69/ESP32AlpacaServer.git
